@@ -1,5 +1,6 @@
 Version 0.4.6, 2009-09-25
 -------------
++ Thread with Linux (base)
 + File: ignoring hidden files
 + Ztring: To_CC4, To_UUID
 x ZtringListList: better CSV compatibility
